tests/script_runtime_errors/bad_fold_op_imut/error.txt
Error: 
    1 | (for event of
    2 |   case (k, v) => v
      |                  ^ Invalid fold operation / for arrays
    3 | into [] use / end)